MCU/.metadata/.plugins/org.eclipse.cdt.ui/PracticaParcial1.3.build.log
01:02:18 **** Build of configuration Debug for project PracticaParcial1.3 ****
make -r -j16 all 
Building file: ../src/PracticaParcial1.3.c
Building file: ../src/cr_startup_lpc175x_6x.c
Building file: ../src/crp.c
Invoking: MCU C Compiler
arm-none-eabi-gcc -DDEBUG -D__CODE_RED -DCORE_M3 -D__USE_CMSIS=CMSISv2p00_LPC17xx -D__LPC17XX__ -D__REDLIB__ -I"C:\nxp\CMSISv2p00_LPC17xx\inc" -O0 -fno-common -g3 -gdwarf-4 -Wall -c -fmessage-length=0 -fno-builtin -ffunction-sections -fdata-sections -fmerge-constants -fmacro-prefix-map="../src/"= -mcpu=cortex-m3 -mthumb -fstack-usage -specs=redlib.specs -MMD -MP -MF"src/PracticaParcial1.3.d" -MT"src/PracticaParcial1.3.o" -MT"src/PracticaParcial1.3.d" -o "src/PracticaParcial1.3.o" "../src/PracticaParcial1.3.c"
Invoking: MCU C Compiler
Invoking: MCU C Compiler
arm-none-eabi-gcc -DDEBUG -D__CODE_RED -DCORE_M3 -D__USE_CMSIS=CMSISv2p00_LPC17xx -D__LPC17XX__ -D__REDLIB__ -I"C:\nxp\CMSISv2p00_LPC17xx\inc" -O0 -fno-common -g3 -gdwarf-4 -Wall -c -fmessage-length=0 -fno-builtin -ffunction-sections -fdata-sections -fmerge-constants -fmacro-prefix-map="../src/"= -mcpu=cortex-m3 -mthumb -fstack-usage -specs=redlib.specs -MMD -MP -MF"src/cr_startup_lpc175x_6x.d" -MT"src/cr_startup_lpc175x_6x.o" -MT"src/cr_startup_lpc175x_6x.d" -o "src/cr_startup_lpc175x_6x.o" "../src/cr_startup_lpc175x_6x.c"
arm-none-eabi-gcc -DDEBUG -D__CODE_RED -DCORE_M3 -D__USE_CMSIS=CMSISv2p00_LPC17xx -D__LPC17XX__ -D__REDLIB__ -I"C:\nxp\CMSISv2p00_LPC17xx\inc" -O0 -fno-common -g3 -gdwarf-4 -Wall -c -fmessage-length=0 -fno-builtin -ffunction-sections -fdata-sections -fmerge-constants -fmacro-prefix-map="../src/"= -mcpu=cortex-m3 -mthumb -fstack-usage -specs=redlib.specs -MMD -MP -MF"src/crp.d" -MT"src/crp.o" -MT"src/crp.d" -o "src/crp.o" "../src/crp.c"
../src/PracticaParcial1.3.c:148:1: error: expected identifier or '(' before '}' token
  148 | }
      | ^
../src/PracticaParcial1.3.c:210:1: error: unterminated comment
  210 | /*
      | ^
make[1]: *** [src/subdir.mk:26: src/PracticaParcial1.3.o] Error 1
make[1]: *** Waiting for unfinished jobs....
Finished building: ../src/crp.c
 
Finished building: ../src/cr_startup_lpc175x_6x.c
 
make: *** [makefile:35: all] Error 2
"make -r -j16 all" terminated with exit code 2. Build might be incomplete.

01:02:18 Build Failed. 5 errors, 0 warnings. (took 192ms)

